// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createMockCodeBlock > cursor calculation > should calculate cursor position correctly 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 200,
    "y": 75,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 150,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 200,
  "offsetX": 0,
  "offsetY": 0,
  "width": 200,
  "x": 100,
  "y": 200,
}
`;

exports[`createMockCodeBlock > cursor calculation > should calculate cursor with offsets 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 210,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 200,
  "offsetX": 10,
  "offsetY": 20,
  "width": 200,
  "x": 100,
  "y": 200,
}
`;

exports[`createMockCodeBlock > cursor calculation > should prefer explicit cursor override over cursorY 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 5,
    "row": 3,
    "x": 999,
    "y": 999,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 100,
  "offsetX": 0,
  "offsetY": 0,
  "width": 100,
  "x": 100,
  "y": 200,
}
`;

exports[`createMockCodeBlock > cursor calculation > should use cursorY convenience parameter 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 200,
    "y": 110,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 150,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 200,
  "offsetX": 0,
  "offsetY": 0,
  "width": 200,
  "x": 100,
  "y": 200,
}
`;

exports[`createMockCodeBlock > default values > should create a block with default values when called with no arguments 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 50,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 100,
  "offsetX": 0,
  "offsetY": 0,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`createMockCodeBlock > edge cases > should handle negative coordinates 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": -50,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 100,
  "offsetX": 0,
  "offsetY": 0,
  "width": 100,
  "x": -100,
  "y": -200,
}
`;

exports[`createMockCodeBlock > edge cases > should handle negative offsets 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 130,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 100,
  "offsetX": -20,
  "offsetY": -30,
  "width": 100,
  "x": 100,
  "y": 0,
}
`;

exports[`createMockCodeBlock > edge cases > should handle zero dimensions 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 0,
    "y": 0,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 0,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 0,
  "offsetX": 0,
  "offsetY": 0,
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`createMockCodeBlock > override behavior > should allow independent override of minGridWidth 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 150,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 64,
  "offsetX": 0,
  "offsetY": 0,
  "width": 100,
  "x": 100,
  "y": 200,
}
`;

exports[`createMockCodeBlock > override behavior > should allow override of code and other properties 1`] = `
{
  "code": [
    "line1",
    "line2",
  ],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 50,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 3,
  "minGridWidth": 100,
  "offsetX": 0,
  "offsetY": 0,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`createMockCodeBlock > override behavior > should override id and offsets 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 60,
    "y": 50,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 100,
  "id": "custom-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 100,
  "offsetX": 10,
  "offsetY": 20,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`createMockCodeBlock > override behavior > should override position and dimensions 1`] = `
{
  "code": [],
  "codeColors": [],
  "codeToRender": [],
  "creationIndex": 0,
  "cursor": {
    "col": 0,
    "row": 0,
    "x": 300,
    "y": 75,
  },
  "extras": {
    "blockHighlights": [],
    "bufferPlotters": [],
    "buttons": [],
    "debuggers": [],
    "errorMessages": [],
    "inputs": [],
    "outputs": [],
    "pianoKeyboards": [],
    "switches": [],
  },
  "gaps": [],
  "height": 150,
  "id": "test-block",
  "lastUpdated": 0,
  "lineNumberColumnWidth": 1,
  "minGridWidth": 200,
  "offsetX": 0,
  "offsetY": 0,
  "width": 200,
  "x": 200,
  "y": 300,
}
`;
